# exordos_s3

./: .gitignore  AGENTS.md  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  func_tests.yaml  publish-to-pypi.yml  tests.yaml
docs/: index.md  s3-api.md
etc/exordos_metapaas/: logging.yaml  metapaas_s3_agent.conf
etc/exordos_s3/: core_agent.conf.j2  exordos_s3.conf.j2  exordos_s3_agent.conf  logging.yaml
etc/genesis_s3/: core_agent.conf.j2  genesis_s3.conf.j2  genesis_s3_agent.conf  logging.yaml
etc/systemd/: exordos-metapaas-rustfs.service  exordos-metapaas-s3-agent.service  exordos-rustfs.service  exordos-s3-agent.service  exordos-s3-core-agent.service  exordos-s3-gservice.service  exordos-s3-orch-api.service  exordos-s3-status-api.service  exordos-s3-user-api.service  genesis-rustfs.service  genesis-s3-agent.service  genesis-s3-core-agent.service  genesis-s3-gservice.service  genesis-s3-orch-api.service  genesis-s3-status-api.service  genesis-s3-user-api.service
exordos/: exordos.yaml
exordos/images/: cp_bootstrap.sh  cp_install.sh  dp_bootstrap.sh  dp_install.sh
exordos/manifests/: communal_s3.yaml.j2  example_s3.yaml.j2  s3aas.yaml.j2
exordos_paas_s3/: constants.py  controllers.py  definition.py  driver.py  infra_builder.py  infra_models.py  models.py  paas_builder.py  paas_models.py  routes.py
exordos_paas_s3/tests/functional/: conftest.py  test_access_key_lifecycle.py  test_basic_crud.py  test_data_integrity.py  test_policy_enforcement.py
exordos_s3/: definition.py  version.py
exordos_s3/agent/universal/drivers/: s3.py
exordos_s3/cmd/: bootstrap.py  gservice.py  orch_api.py  status_api.py  user_api.py
exordos_s3/common/: config.py  constants.py  permissions.py
exordos_s3/controlplane/api/: controllers.py  routes.py
exordos_s3/controlplane/dm/: models.py
exordos_s3/controlplane/infra/dm/: models.py
exordos_s3/controlplane/infra/services/: builder.py
exordos_s3/controlplane/paas/dm/: models.py
exordos_s3/controlplane/paas/services/: builder.py
exordos_s3/dataplane/: driver.py
exordos_s3/infra/dm/: models.py
exordos_s3/infra/services/: builder.py
exordos_s3/orch_api/api/: app.py  routes.py
exordos_s3/paas/dm/: models.py
exordos_s3/paas/services/: builder.py
exordos_s3/services/: gservice.py
exordos_s3/status_api/api/: app.py  routes.py
exordos_s3/tests/functional/: conftest.py  prepare_env.py  test_access_key_lifecycle.py  test_basic_crud.py  test_data_integrity.py  test_policy_enforcement.py
exordos_s3/tests/unit/: test_smoke.py
exordos_s3/user_api/api/: app.py  controllers.py  routes.py
exordos_s3/user_api/dm/: models.py
genesis/: genesis.yaml
genesis/images/: cp_bootstrap.sh  cp_install.sh  dp_bootstrap.sh  dp_install.sh
genesis/manifests/: communal_s3.yaml.j2  s3_example.j2  s3aas.yaml.j2
genesis_s3/: version.py
genesis_s3/agent/universal/drivers/: s3.py
genesis_s3/cmd/: bootstrap.py  gservice.py  orch_api.py  status_api.py  user_api.py
genesis_s3/common/: config.py  constants.py  permissions.py
genesis_s3/common/api/middlewares/: errors.py
genesis_s3/infra/dm/: models.py
genesis_s3/infra/services/: builder.py
genesis_s3/orch_api/api/: app.py  controllers.py  routes.py
genesis_s3/paas/dm/: models.py
genesis_s3/paas/services/: builder.py
genesis_s3/services/: gservice.py
genesis_s3/status_api/api/: app.py  routes.py
genesis_s3/tests/functional/: conftest.py  prepare_env.py  test_access_key_lifecycle.py  test_basic_crud.py  test_data_integrity.py  test_policy_enforcement.py
genesis_s3/tests/unit/: test_smoke.py
genesis_s3/user_api/api/: app.py  controllers.py  routes.py
genesis_s3/user_api/dm/: models.py
migrations/: 0000-init-a1b2c3.py
