[project]
name = "exordos_paas_s3"
description = "S3 PaaS plugin for the Exordos MetaPaaS runtime"
readme = "README.md"
authors = [{name = "Genesis Corporation", email = "mail@gmelikov.ru"}]
dynamic = ["version"]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "oslo.config>=3.22.2,<10.0.0",
    "restalchemy>=15.0.0,<16.0.0",
    "gcl_iam>=1.0.3,<2.0.0",
    "gcl_looper>=1.2.3,<2.0.0",
    "gcl_sdk>=3.0.0,<4.0.0",
    "exordos_metapaas>=0.0.5",
    "minio>=7.2.0,<8.0.0",
    "requests>=2.28.0,<3.0.0",
]

[project.entry-points."exordos_metapaas_paas"]
s3 = "exordos_paas_s3.definition:S3Definition"

[project.entry-points."gcl_sdk_universal_agent"]
S3CapabilityDriver = "exordos_paas_s3.driver:S3CapabilityDriver"

[build-system]
requires = ["setuptools>=75.3.3", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["exordos_paas_s3*"]

[tool.setuptools.package-data]
exordos_paas_s3 = ["migrations/*.py"]
